# roview

./: LICENSE  README.md  apple-icon.sh  index.html  package-lock.json  package.json  vite.config.ts  win-clone.bat
.cursor/rules/: fluentui-css-appearance-policy.mdc  fluentui-theming.mdc  ts-dry-and-unused-cleanup.mdc  tsx-dry-and-unused-cleanup.mdc  tsx-react-hooks-correctness.mdc
.github/workflows/: tauri-build.yml
docs/: _config.yml  index.md  release.js
src/: AboutDialog.tsx  App.css  App.tsx  ChartErrorBoundary.tsx  ChartGrid.tsx  ColumnSelectDialog.tsx  ColumnSelector.tsx  ExportChartsDialog.tsx  FileWarningsMessageBar.tsx  LoadedFileView.tsx  PlaybackBar.tsx  RunFile.ts  UiErrorBoundary.tsx  UpgradeNotificationBar.tsx  VersionCheckDialog.tsx  WindowsAppMenuBar.tsx  chartExport.ts  checkGithubRelease.ts  converters.ts  main.tsx  productSite.ts  upgradeCopy.ts  util.ts  versionCompare.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/files/: empty-cols.csv  empty-time.csv  no-rows.csv  no-time.csv  one-point.csv  partial-time.csv  simple-SI.csv  simple-US.csv  time-only.csv  zero-time.csv
